# miadas_M03_proyecto

./: .gitignore  .pdm-python  Dockerfile  README.md  app.py  create_data.py  dashboard.py  pyproject.toml
_data/: bolivia_departamentos_dos.geojson  clientes.csv  clientes.feather  cuentas.csv  cuentas.feather  departamentos.csv  departamentos.feather  profesiones.csv  profesiones.feather  rutas_mineras.json
assets/: style.css
callbacks/: callbacks_kpis.py  callbacks_rutas.py  callbacks_sismos.py
layout/: filtros.py  tabs_clima_real.py  tabs_creditos.py  tabs_graficas.py  tabs_kpis.py  tabs_rutas.py  tabs_tiempo_real.py
utils/: data_loader.py  mapas.py  transformaciones.py
